ADD_EXECUTABLE(aspect
    gravity_model/interface.cc
    gravity_model/vertical.cc
    gravity_model/radial.cc
    simulator/checkpoint_restart.cc
    simulator/initial_conditions.cc
    simulator/parameters.cc
    simulator/solver.cc
    simulator/simulator_access.cc
    simulator/assembly.cc
    simulator/core.cc
    simulator/helper_functions.cc
    initial_conditions/interface.cc
    initial_conditions/box.cc
    initial_conditions/function.cc
    initial_conditions/spherical_shell.cc
    compositional_initial_conditions/interface.cc
    compositional_initial_conditions/function.cc
    boundary_temperature/spherical_constant.cc
    boundary_temperature/interface.cc
    boundary_temperature/box.cc
    boundary_temperature/tan_gurnis.cc
    adiabatic_conditions.cc
    global.cc
    geometry_model/interface.cc
    geometry_model/box.cc
    geometry_model/spherical_shell.cc
    material_model/steinberger.cc
    material_model/table.cc
    material_model/simple.cc
    material_model/interface.cc
    material_model/duretz_et_al.cc
    material_model/tan_gurnis.cc
    postprocess/table_velocity_statistics.cc
    postprocess/visualization.cc
    postprocess/tracer.cc
    postprocess/table_heat_flux_statistics.cc
    postprocess/velocity_statistics.cc
    postprocess/composition_statistics.cc
    postprocess/depth_average.cc
    postprocess/interface.cc
    postprocess/duretz_et_al.cc
    postprocess/temperature_statistics.cc
    postprocess/tan_gurnis.cc
    postprocess/visualization/nonadiabatic_temperature.cc
    postprocess/visualization/friction_heating.cc
    postprocess/visualization/strain_rate.cc
    postprocess/visualization/thermal_expansivity.cc
    postprocess/visualization/viscosity.cc
    postprocess/visualization/density.cc
    postprocess/visualization/viscosity_ratio.cc
    postprocess/visualization/specific_heat.cc
    postprocess/visualization/seismic_vs.cc
    postprocess/visualization/partition.cc
    postprocess/visualization/thermodynamic_phase.cc
    postprocess/visualization/seismic_vp.cc
    postprocess/visualization/nonadiabatic_pressure.cc
    postprocess/heat_flux_statistics.cc
    velocity_boundary_conditions/zero_velocity.cc
    velocity_boundary_conditions/interface.cc
    velocity_boundary_conditions/gplates.cc
    velocity_boundary_conditions/duretz_et_al.cc
    velocity_boundary_conditions/function.cc
    main.cc
  )

DEAL_II_SETUP_TARGET(aspect)
