ADD_EXECUTABLE(aspect
    adiabatic_conditions.cc
    boundary_temperature/box.cc
    boundary_temperature/interface.cc
    boundary_temperature/spherical_constant.cc
    boundary_temperature/tan_gurnis.cc
    compositional_initial_conditions/function.cc
    compositional_initial_conditions/interface.cc
    geometry_model/box.cc
    geometry_model/interface.cc
    geometry_model/spherical_shell.cc
    global.cc
    gravity_model/interface.cc
    gravity_model/radial.cc
    gravity_model/vertical.cc
    initial_conditions/adiabatic.cc
    initial_conditions/box.cc
    initial_conditions/function.cc
    initial_conditions/interface.cc
    initial_conditions/spherical_shell.cc
    main.cc
    material_model/duretz_et_al.cc
    material_model/interface.cc
    material_model/simple.cc
    material_model/steinberger.cc
    material_model/table.cc
    material_model/tan_gurnis.cc
    mesh_refinement/composition.cc
    mesh_refinement/density.cc
    mesh_refinement/interface.cc
    mesh_refinement/temperature.cc
    mesh_refinement/thermal_energy_density.cc
    mesh_refinement/velocity.cc
    postprocess/composition_statistics.cc
    postprocess/depth_average.cc
    postprocess/duretz_et_al.cc
    postprocess/heat_flux_statistics.cc
    postprocess/interface.cc
    postprocess/table_heat_flux_statistics.cc
    postprocess/table_velocity_statistics.cc
    postprocess/tan_gurnis.cc
    postprocess/temperature_statistics.cc
    postprocess/tracer.cc
    postprocess/velocity_statistics.cc
    postprocess/visualization.cc
    postprocess/visualization/density.cc
    postprocess/visualization/error_indicator.cc
    postprocess/visualization/friction_heating.cc
    postprocess/visualization/nonadiabatic_pressure.cc
    postprocess/visualization/nonadiabatic_temperature.cc
    postprocess/visualization/partition.cc
    postprocess/visualization/seismic_anomalies.cc
    postprocess/visualization/seismic_vp.cc
    postprocess/visualization/seismic_vs.cc
    postprocess/visualization/specific_heat.cc
    postprocess/visualization/strain_rate.cc
    postprocess/visualization/thermal_expansivity.cc
    postprocess/visualization/thermodynamic_phase.cc
    postprocess/visualization/viscosity.cc
    postprocess/visualization/viscosity_ratio.cc
    simulator/assembly.cc
    simulator/checkpoint_restart.cc
    simulator/core.cc
    simulator/helper_functions.cc
    simulator/initial_conditions.cc
    simulator/introspection.cc
    simulator/parameters.cc
    simulator/simulator_access.cc
    simulator/solver.cc
    termination_criteria/interface.cc
    termination_criteria/steady_rms_velocity.cc
    termination_criteria/user_request.cc
    velocity_boundary_conditions/duretz_et_al.cc
    velocity_boundary_conditions/function.cc
    velocity_boundary_conditions/gplates.cc
    velocity_boundary_conditions/interface.cc
    velocity_boundary_conditions/zero_velocity.cc
  )

DEAL_II_SETUP_TARGET(aspect)
